--- a/index.html
+++ b/index.html
@@ -2,131 +2,293 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Data Selling Web App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>abdooldata App</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png" type="image/png">
   <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      transition: all 0.3s ease-in-out;
+    }
     body {
-      font-family: sans-serif;
-      background: linear-gradient(to right, #00c6ff, #0072ff);
+      background: #f4f4f9;
+      color: #333;
+      padding: 1rem;
+    }
+    body.dark {
+      background: #1c1c1c;
+      color: #fff;
+    }
+    header {
+      background-color: #0047ab;
+      padding: 1rem;
+      text-align: center;
+      color: white;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+    }
+    nav {
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-bottom: 2rem;
     }
-    .container {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      width: 340px;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
+    nav button {
+      padding: 0.6rem 1.2rem;
+      border: none;
       border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #0072ff;
+      background-color: #0047ab;
       color: white;
       cursor: pointer;
-      border: none;
     }
-    button:hover {
-      background-color: #005ecb;
+    nav button:hover {
+      background-color: #002e75;
     }
-    .tab-buttons {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 20px;
-    }
-    .tab-buttons button {
-      width: 30%;
-      padding: 8px;
-    }
-    .tab {
+    .tab-content {
       display: none;
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .active {
+    .tab-content.active {
       display: block;
     }
-    #message {
+    input, select, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button.action {
+      background-color: #28a745;
+      color: white;
+      padding: 0.6rem 1rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 1rem;
+    }
+    button.action:hover {
+      background-color: #1e7e34;
+    }
+    footer {
       text-align: center;
-      font-weight: bold;
-      color: green;
+      margin-top: 3rem;
+      color: #777;
+    }
+    .dark header, .dark .tab-content {
+      background-color: #222;
+    }
+    .dark nav button {
+      background-color: #666;
+    }
+    #darkToggle {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      padding: 0.4rem 0.8rem;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 100;
+    }
+    #profile-pic {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="tab-buttons">
-      <button onclick="switchTab('signup')">Signup</button>
-      <button onclick="switchTab('login')">Login</button>
-      <button onclick="switchTab('dashboard')">Dashboard</button>
-    </div>
+  <button id="darkToggle" onclick="toggleDarkMode()">Dark Mode</button>
+  <header>
+    <h1>abdooldata App</h1>
+    <p>Buy Data Easily & Instantly</p>
+  </header>
 
-    <div id="signup" class="tab active">
-      <h2>Signup</h2>
-      <form onsubmit="event.preventDefault(); alert('Signup successful!')">
-        <input type="email" placeholder="Email" required />
-        <input type="password" placeholder="Password" required />
-        <button type="submit">Register</button>
-      </form>
-    </div>
+  <nav>
+    <button onclick="showTab('login')">Login</button>
+    <button onclick="showTab('signup')">Signup</button>
+    <button onclick="showTab('dashboard')">Dashboard</button>
+    <button onclick="showTab('admin')">Admin</button>
+    <button onclick="showTab('contact')">Contact</button>
+    <button onclick="showTab('profile')">Profile</button>
+  </nav>
 
-    <div id="login" class="tab">
-      <h2>Login</h2>
-      <form onsubmit="event.preventDefault(); switchTab('dashboard')">
-        <input type="email" placeholder="Email" required />
-        <input type="password" placeholder="Password" required />
-        <button type="submit">Login</button>
-      </form>
-    </div>
+  <section id="login" class="tab-content">
+    <h2>Login</h2>
+    <input type="text" id="login-username" placeholder="Username" />
+    <input type="password" id="login-password" placeholder="Password" />
+    <button class="action" onclick="loginUser()">Login</button>
+  </section>
 
-    <div id="dashboard" class="tab">
-      <h2>Buy Data</h2>
-      <form onsubmit="handlePurchase(event)">
-        <select required>
-          <option value="">Select Network</option>
-          <option value="mtn">MTN</option>
-          <option value="airtel">Airtel</option>
-          <option value="glo">Glo</option>
-          <option value="9mobile">9Mobile</option>
-        </select>
+  <section id="signup" class="tab-content">
+    <h2>Signup</h2>
+    <input type="text" id="signup-username" placeholder="Username" />
+    <input type="password" id="signup-password" placeholder="Password" />
+    <button class="action" onclick="signupUser()">Signup</button>
+  </section>
 
-        <select required>
-          <option value="">Select Data Plan</option>
-          <option value="1">1GB</option>
-          <option value="2">2GB</option>
-          <option value="5">5GB</option>
-          <option value="10">10GB</option>
-        </select>
+  <section id="dashboard" class="tab-content">
+    <h2>Buy Data</h2>
+    <select id="network">
+      <option value="">Select Network</option>
+      <option value="MTN">MTN</option>
+      <option value="GLO">GLO</option>
+      <option value="AIRTEL">AIRTEL</option>
+      <option value="9MOBILE">9MOBILE</option>
+    </select>
+    <select id="plan">
+      <option value="">Select Plan</option>
+      <option value="500MB - ₦100">500MB - ₦100</option>
+      <option value="1GB - ₦200">1GB - ₦200</option>
+      <option value="2GB - ₦400">2GB - ₦400</option>
+    </select>
+    <input type="tel" id="phone" placeholder="Enter Phone Number" />
+    <button class="action" onclick="buyData()">Buy Now</button>
+    <p id="purchase-message"></p>
+    <section id="paystack-payment" class="tab-content">
+      <h2>Make Payment</h2>
+      <button id="paystack-button" class="action">Pay with Paystack</button>
+    </section>
+  </section>
 
-        <input type="tel" placeholder="Phone Number (e.g. 080...)" required />
-        <button type="submit">Submit</button>
-      </form>
-      <div id="message"></div>
-    </div>
-  </div>
+  <section id="admin" class="tab-content">
+    <h2>Admin Panel</h2>
+    <ul id="transactions"></ul>
+  </section>
+
+  <section id="contact" class="tab-content">
+    <h2>Contact Us</h2>
+    <input type="text" placeholder="Your Name" />
+    <input type="email" placeholder="Your Email" />
+    <textarea rows="4" placeholder="Your Message"></textarea>
+    <button class="action">Submit</button>
+  </section>
+
+  <section id="profile" class="tab-content">
+    <h2>Your Profile</h2>
+    <input type="file" accept="image/*" onchange="uploadImage(event)" />
+    <img id="profile-pic" src="" alt="Profile Picture" style="display: none;" />
+    <p id="profile-name"></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 abdooldata. All rights reserved.</p>
+  </footer>
 
   <script>
-    function switchTab(tabId) {
-      document.querySelectorAll('.tab').forEach(tab => {
-        tab.classList.remove('active');
-      });
+    function showTab(tabId) {
+      document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
+      if (tabId === 'admin') loadTransactions();
+      if (tabId === 'profile') loadProfile();
     }
 
-    function handlePurchase(e) {
-      e.preventDefault();
-      document.getElementById("message").innerText = "Your data purchase request has been submitted!";
+    function signupUser() {
+      const username = document.getElementById('signup-username').value;
+      const password = document.getElementById('signup-password').value;
+      localStorage.setItem('user', JSON.stringify({ username, password }));
+      alert('Signup successful! Please login.');
+      showTab('login');
     }
-  </script>
-</body>
-</html>
+
+    function loginUser() {
+      const username = document.getElementById('login-username').value;
+      const password = document.getElementById('login-password').value;
+      const user = JSON.parse(localStorage.getItem('user'));
+      if (user && user.username === username && user.password === password) {
+        alert('Login successful!');
+        showTab('dashboard');
+      } else {
+        alert('Invalid credentials');
+      }
+    }
+
+    function buyData() {
+      const network = document.getElementById('network').value;
+      const plan = document.getElementById('plan').value;
+      const phone = document.getElementById('phone').value;
+      const msg = document.getElementById('purchase-message');
+      if (network && plan && phone) {
+        msg.innerText = `Processing your ${plan} on ${network} for ${phone}...`;
+        const log = JSON.parse(localStorage.getItem('transactions') || '[]');
+        log.push({ network, plan, phone, time: new Date().toLocaleString() });
+        localStorage.setItem('transactions', JSON.stringify(log));
+        setTimeout(() => {
+          msg.innerText = `Success! ${plan} sent to ${phone}`;
+        }, 2000);
+      } else {
+        msg.innerText = 'Please fill all fields.';
+      }
+    }
+
+    function loadTransactions() {
+      const list = document.getElementById('transactions');
+      const log = JSON.parse(localStorage.getItem('transactions') || '[]');
+      list.innerHTML = '';
+      log.forEach(entry => {
+        const li = document.createElement('li');
+        li.textContent = `${entry.plan} on ${entry.network} to ${entry.phone} — ${entry.time}`;
+        list.appendChild(li);
+      });
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+
+    function uploadImage(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = () => {
+          const img = document.getElementById('profile-pic');
+          img.src = reader.result;
+          img.style.display = 'block';
+          localStorage.setItem('profilePic', reader.result);
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    function loadProfile() {
+      const user = JSON.parse(localStorage.getItem('user'));
+      const name = user?.username || 'Guest';
+      document.getElementById('profile-name').textContent = `Welcome, ${name}`;
+      const pic = localStorage.getItem('profilePic');
+      if (pic) {
+        const img = document.getElementById('profile-pic');
+        img.src = pic;
+        img.style.display = 'block';
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      loadTransactions();
+    });
+
+    // Paystack Payment Script
+    document.getElementById('paystack-button').addEventListener('click', function () {
+        var handler = PaystackPop.setup({
+            key: 'your-public-test-key',  // Replace with your Paystack test key
+            email: 'user@example.com',    // Replace with user's email
+            amount: 50000,                // Amount in kobo, for example 50000 kobo = ₦500
+            currency: "NGN",
+            callback: function (response) {
+                alert('Payment successful! Transaction ref is ' + response.reference);
+            },
+            onClose: function () {
+                alert('Payment window closed.');
+            }
+        });
