--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     document.getElementById('paystack-button').addEventListener('click', function () {
       var amount = document.getElementById('purchase-amount').value;
       var handler = PaystackPop.setup({
-        key: 'your-public-test-key',  // Replace with your Paystack public key (test/live)
+        key: 'your-public-live-key',  // pk_live_fefa4cab21e99bd551e0979a445038b389d9cfea
         email: document.getElementById('login-email').value,    // Replace with the logged-in user's email
         amount: amount * 100,         // Amount in kobo (₦25 = 2500 kobo)
         currency: "NGN",              // Currency (NGN for Naira)
