--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Authentication with Paystack and Buy Data/Airtime</title>
+  <title>Abdool Data App - User Authentication & Transactions</title>
   <script src="https://js.paystack.co/v1/inline.js"></script>
   <style>
     body {
@@ -12,7 +12,6 @@
       padding: 0;
       background-color: #f0f0f0;
     }
-
     .container {
       max-width: 600px;
       margin: 50px auto;
@@ -21,21 +20,17 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-
     h2 {
       text-align: center;
       color: #333;
     }
-
     .form-group {
       margin-bottom: 15px;
     }
-
     .form-group label {
       font-size: 14px;
       color: #333;
     }
-
     .form-group input, .form-group select {
       width: 100%;
       padding: 10px;
@@ -43,7 +38,6 @@
       border: 1px solid #ccc;
       border-radius: 4px;
     }
-
     .action-button {
       background-color: #4CAF50;
       color: white;
@@ -54,25 +48,20 @@
       width: 100%;
       font-size: 16px;
     }
-
     .action-button:hover {
       background-color: #45a049;
     }
-
     .link {
       text-align: center;
       margin-top: 15px;
     }
-
     .link a {
       color: #007BFF;
       text-decoration: none;
     }
-
     .link a:hover {
       text-decoration: underline;
     }
-
     .message {
       text-align: center;
       margin-top: 20px;
@@ -84,7 +73,7 @@
 <body>
 
   <div class="container">
-    <h2>User Authentication & Transactions</h2>
+    <h2>Abdool Data App</h2>
 
     <!-- Login Form -->
     <div id="login-form">
@@ -116,6 +105,15 @@
       <div class="link">
         <p>Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
       </div>
+    </div>
+
+    <!-- Referral Program Section -->
+    <div id="referral-section" style="display: none;">
+      <h3>Referral Program</h3>
+      <p>Earn rewards by referring your friends! Share your code and get bonuses.</p>
+      <p>Your Referral Code: <span id="referral-code">ABC123XYZ</span></p>
+      <button class="action-button" onclick="shareReferralCode()">Share Referral Code</button>
+      <div id="referral-message"></div>
     </div>
 
     <!-- Data and Airtime Purchase Form -->
@@ -167,6 +165,7 @@
       if (email && password) {
         document.getElementById('message').innerHTML = "Login Successful!";
         document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after login
+        document.getElementById('referral-section').style.display = 'block';  // Show referral program
       } else {
         document.getElementById('message').innerHTML = "Please fill all fields.";
       }
@@ -180,9 +179,16 @@
       if (email && password) {
         document.getElementById('message').innerHTML = "Signup Successful!";
         document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after signup
+        document.getElementById('referral-section').style.display = 'block';  // Show referral program
       } else {
         document.getElementById('message').innerHTML = "Please fill all fields.";
       }
+    }
+
+    // Referral Code Share
+    function shareReferralCode() {
+      var referralCode = document.getElementById('referral-code').innerText;
+      document.getElementById('referral-message').innerHTML = "Share this referral code with your friends: " + referralCode;
     }
 
     // Function to process purchase (buy data or airtime)
