--- a/index.html
+++ b/index.html
@@ -1,222 +1,125 @@
+
+<!-- Abdool Data App - All Pages in One File -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdool Data App - User Authentication & Transactions</title>
+  <title>Abdool Data App</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://js.paystack.co/v1/inline.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f0f0;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-    }
-
-    .form-group label {
-      font-size: 14px;
-      color: #333;
-    }
-
-    .form-group input, .form-group select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .action-button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      width: 100%;
-      font-size: 16px;
-    }
-
-    .action-button:hover {
-      background-color: #45a049;
-    }
-
-    .link {
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    .link a {
-      color: #007BFF;
-      text-decoration: none;
-    }
-
-    .link a:hover {
-      text-decoration: underline;
-    }
-
-    .message {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 16px;
-      color: #333;
-    }
+    .hidden-section { display: none; }
   </style>
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
 
-  <div class="container">
-    <h2>Abdool Data App - User Authentication & Transactions</h2>
+<!-- Navigation -->
+<header class="bg-white shadow p-4 flex justify-between items-center">
+  <h1 class="text-xl font-bold">Abdool Data App</h1>
+  <nav class="space-x-4">
+    <button onclick="showSection('login')" class="text-blue-600 hover:underline">Login</button>
+    <button onclick="showSection('signup')" class="text-blue-600 hover:underline">Sign Up</button>
+    <button onclick="showSection('dashboard')" class="text-blue-600 hover:underline">Dashboard</button>
+    <button onclick="showSection('upload')" class="text-blue-600 hover:underline">Upload</button>
+    <button onclick="showSection('payment')" class="text-blue-600 hover:underline">Pay</button>
+  </nav>
+</header>
 
-    <!-- Login Form -->
-    <div id="login-form">
-      <div class="form-group">
-        <label for="login-email">Email:</label>
-        <input type="email" id="login-email" placeholder="Enter your email">
-      </div>
-      <div class="form-group">
-        <label for="login-password">Password:</label>
-        <input type="password" id="login-password" placeholder="Enter your password">
-      </div>
-      <button class="action-button" onclick="loginUser()">Login</button>
-      <div class="link">
-        <p>Don't have an account? <a href="#" onclick="showSignupForm()">Sign up</a></p>
-      </div>
-    </div>
+<!-- Landing Page -->
+<section class="p-10 text-center" id="landing">
+  <h2 class="text-3xl font-semibold mb-4">Welcome to Abdool Data App</h2>
+  <p class="text-gray-600">Upload, view, and manage your data securely and easily.</p>
+</section>
 
-    <!-- Signup Form -->
-    <div id="signup-form" style="display: none;">
-      <div class="form-group">
-        <label for="signup-email">Email:</label>
-        <input type="email" id="signup-email" placeholder="Enter your email">
-      </div>
-      <div class="form-group">
-        <label for="signup-password">Password:</label>
-        <input type="password" id="signup-password" placeholder="Enter your password">
-      </div>
-      <button class="action-button" onclick="signupUser()">Sign Up</button>
-      <div class="link">
-        <p>Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
-      </div>
-    </div>
-
-    <!-- Data and Airtime Purchase Form -->
-    <div id="purchase-form" style="display: none;">
-      <h3>Purchase Data or Airtime</h3>
-      <div class="form-group">
-        <label for="purchase-type">Select Purchase Type:</label>
-        <select id="purchase-type">
-          <option value="data">Buy Data</option>
-          <option value="airtime">Buy Airtime</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="purchase-amount">Enter Amount (₦):</label>
-        <input type="number" id="purchase-amount" placeholder="Enter amount">
-      </div>
-      <button class="action-button" onclick="processPurchase()">Purchase</button>
-      <div class="message" id="purchase-message"></div>
-    </div>
-
-    <!-- Payment Button -->
-    <button class="action-button" id="paystack-button" style="display: none;">Pay with Paystack</button>
-
-    <div class="message" id="message"></div>
+<!-- Sign Up -->
+<section id="signup" class="hidden-section flex items-center justify-center min-h-screen">
+  <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-6 text-center">Create an Account</h2>
+    <form onsubmit="event.preventDefault(); showSection('dashboard')" class="space-y-4">
+      <input type="email" placeholder="Email" required class="w-full px-4 py-2 border rounded" />
+      <input type="password" placeholder="Password" required class="w-full px-4 py-2 border rounded" />
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded">Sign Up</button>
+    </form>
   </div>
+</section>
 
-  <script>
-    // Function to switch to login form
-    function showLoginForm() {
-      document.getElementById('signup-form').style.display = 'none';
-      document.getElementById('login-form').style.display = 'block';
-      document.getElementById('paystack-button').style.display = 'none';
-      document.getElementById('purchase-form').style.display = 'none';
+<!-- Login -->
+<section id="login" class="hidden-section flex items-center justify-center min-h-screen">
+  <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
+    <form onsubmit="event.preventDefault(); showSection('dashboard')" class="space-y-4">
+      <input type="email" placeholder="Email" required class="w-full px-4 py-2 border rounded" />
+      <input type="password" placeholder="Password" required class="w-full px-4 py-2 border rounded" />
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded">Login</button>
+    </form>
+  </div>
+</section>
+
+<!-- Dashboard -->
+<section id="dashboard" class="hidden-section p-6">
+  <h2 class="text-2xl font-semibold mb-4">Your Data Overview</h2>
+  <button onclick="showSection('upload')" class="mb-4 bg-blue-600 text-white px-4 py-2 rounded">Upload New Data</button>
+  <div class="bg-white p-4 rounded shadow">
+    <p class="text-gray-600">No data uploaded yet.</p>
+  </div>
+</section>
+
+<!-- Upload -->
+<section id="upload" class="hidden-section flex items-center justify-center min-h-screen">
+  <div class="bg-white p-6 rounded shadow-md w-full max-w-lg">
+    <h2 class="text-2xl font-bold mb-4">Upload Dataset</h2>
+    <form onsubmit="event.preventDefault(); alert('Data Uploaded!'); showSection('dashboard')" class="space-y-4">
+      <input type="file" accept=".csv,.json" required class="w-full border px-3 py-2 rounded" />
+      <button type="submit" class="w-full bg-green-600 text-white py-2 rounded">Upload</button>
+    </form>
+  </div>
+</section>
+
+<!-- Payment -->
+<section id="payment" class="hidden-section flex items-center justify-center min-h-screen">
+  <div class="bg-white rounded-2xl shadow-xl p-8 max-w-md w-full">
+    <h2 class="text-3xl font-bold text-center text-gray-800 mb-6">Pay with Paystack</h2>
+    <p class="text-sm text-gray-500 text-center mb-6">Secure payment for your Abdool Data App plan.</p>
+    <input id="email" type="email" placeholder="Enter your email"
+      class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4" required />
+    <button onclick="payWithPaystack()"
+      class="w-full bg-blue-600 hover:bg-blue-700 transition text-white font-semibold py-2 px-4 rounded-lg">
+      Pay ₦2000
+    </button>
+    <p class="mt-6 text-center text-sm text-gray-500">You will be redirected after successful payment.</p>
+  </div>
+</section>
+
+<script>
+  function showSection(id) {
+    document.querySelectorAll('section').forEach(section => section.classList.add('hidden-section'));
+    document.getElementById(id).classList.remove('hidden-section');
+  }
+
+  function payWithPaystack() {
+    const email = document.getElementById('email').value;
+    if (!email) {
+      alert("Please enter your email");
+      return;
     }
-
-    // Function to switch to signup form
-    function showSignupForm() {
-      document.getElementById('login-form').style.display = 'none';
-      document.getElementById('signup-form').style.display = 'block';
-      document.getElementById('paystack-button').style.display = 'none';
-      document.getElementById('purchase-form').style.display = 'none';
-    }
-
-    // Simulating user login
-    function loginUser() {
-      var email = document.getElementById('login-email').value;
-      var password = document.getElementById('login-password').value;
-      
-      if (email && password) {
-        document.getElementById('message').innerHTML = "Login Successful!";
-        document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after login
-      } else {
-        document.getElementById('message').innerHTML = "Please fill all fields.";
+    let handler = PaystackPop.setup({
+      key: 'pk_live_fefa4cab21e99bd551e0979a445038b389d9cfea',
+      email: email,
+      amount: 200000,
+      currency: "NGN",
+      ref: '' + Math.floor(Math.random() * 1000000000 + 1),
+      callback: function(response) {
+        alert('Payment complete! Reference: ' + response.reference);
+        showSection('dashboard');
+      },
+      onClose: function() {
+        alert('Payment window closed.');
       }
-    }
-
-    // Simulating user signup
-    function signupUser() {
-      var email = document.getElementById('signup-email').value;
-      var password = document.getElementById('signup-password').value;
-      
-      if (email && password) {
-        document.getElementById('message').innerHTML = "Signup Successful!";
-        document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after signup
-      } else {
-        document.getElementById('message').innerHTML = "Please fill all fields.";
-      }
-    }
-
-    // Function to process purchase (buy data or airtime)
-    function processPurchase() {
-      var purchaseType = document.getElementById('purchase-type').value;
-      var amount = document.getElementById('purchase-amount').value;
-
-      if (amount && purchaseType) {
-        document.getElementById('purchase-message').innerHTML = "Processing your " + purchaseType + " purchase of ₦" + amount;
-        document.getElementById('paystack-button').style.display = 'block';  // Show payment button after selection
-      } else {
-        document.getElementById('purchase-message').innerHTML = "Please fill all fields.";
-      }
-    }
-
-    // Paystack payment integration
-    document.getElementById('paystack-button').addEventListener('click', function () {
-      var amount = document.getElementById('purchase-amount').value;
-      var handler = PaystackPop.setup({
-        key: 'pk_live_fefa4cab21e99bd551e0979a445038b389d9cfea',  // Live Paystack Public Key
-        email: document.getElementById('login-email').value,    // Logged-in user email
-        amount: amount * 100,         // Amount in kobo (₦25 = 2500 kobo)
-        currency: "NGN",              // Currency (NGN for Naira)
-        callback: function (response) {
-          alert('Payment successful! Transaction reference: ' + response.reference);
-          // Send reference to backend for validation if necessary
-        },
-        onClose: function () {
-          alert('Payment window closed.');
-        }
-      });
-      handler.openIframe();
     });
-  </script>
+    handler.openIframe();
+  }
+</script>
 
 </body>
 </html>
