--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-
-<!-- Abdool Data App - All Pages in One File -->
+<!-- Abdool Data App - Complete, Clean Version -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Abdool Data App</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <script src="https://js.paystack.co/v1/inline.js"></script>
   <style>
     .hidden-section { display: none; }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col">
 
-<!-- Navigation -->
+<!-- Header Navigation -->
 <header class="bg-white shadow p-4 flex justify-between items-center">
   <h1 class="text-xl font-bold">Abdool Data App</h1>
   <nav class="space-x-4">
+    <button onclick="showSection('landing')" class="text-blue-600 hover:underline">Home</button>
     <button onclick="showSection('login')" class="text-blue-600 hover:underline">Login</button>
     <button onclick="showSection('signup')" class="text-blue-600 hover:underline">Sign Up</button>
     <button onclick="showSection('dashboard')" class="text-blue-600 hover:underline">Dashboard</button>
@@ -33,25 +33,25 @@
 </section>
 
 <!-- Sign Up -->
-<section id="signup" class="hidden-section flex items-center justify-center min-h-screen">
+<section id="signup" class="hidden-section flex items-center justify-center p-6">
   <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md">
     <h2 class="text-2xl font-bold mb-6 text-center">Create an Account</h2>
     <form onsubmit="event.preventDefault(); showSection('dashboard')" class="space-y-4">
       <input type="email" placeholder="Email" required class="w-full px-4 py-2 border rounded" />
       <input type="password" placeholder="Password" required class="w-full px-4 py-2 border rounded" />
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded">Sign Up</button>
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Sign Up</button>
     </form>
   </div>
 </section>
 
 <!-- Login -->
-<section id="login" class="hidden-section flex items-center justify-center min-h-screen">
+<section id="login" class="hidden-section flex items-center justify-center p-6">
   <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md">
     <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
     <form onsubmit="event.preventDefault(); showSection('dashboard')" class="space-y-4">
       <input type="email" placeholder="Email" required class="w-full px-4 py-2 border rounded" />
       <input type="password" placeholder="Password" required class="w-full px-4 py-2 border rounded" />
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded">Login</button>
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Login</button>
     </form>
   </div>
 </section>
@@ -59,42 +59,60 @@
 <!-- Dashboard -->
 <section id="dashboard" class="hidden-section p-6">
   <h2 class="text-2xl font-semibold mb-4">Your Data Overview</h2>
-  <button onclick="showSection('upload')" class="mb-4 bg-blue-600 text-white px-4 py-2 rounded">Upload New Data</button>
+  <button onclick="showSection('upload')" class="mb-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Upload New Data</button>
   <div class="bg-white p-4 rounded shadow">
-    <p class="text-gray-600">No data uploaded yet.</p>
+    <p id="dashboard-data" class="text-gray-600">No data uploaded yet.</p>
   </div>
 </section>
 
 <!-- Upload -->
-<section id="upload" class="hidden-section flex items-center justify-center min-h-screen">
+<section id="upload" class="hidden-section flex items-center justify-center p-6">
   <div class="bg-white p-6 rounded shadow-md w-full max-w-lg">
     <h2 class="text-2xl font-bold mb-4">Upload Dataset</h2>
-    <form onsubmit="event.preventDefault(); alert('Data Uploaded!'); showSection('dashboard')" class="space-y-4">
-      <input type="file" accept=".csv,.json" required class="w-full border px-3 py-2 rounded" />
-      <button type="submit" class="w-full bg-green-600 text-white py-2 rounded">Upload</button>
+    <form onsubmit="event.preventDefault(); handleUpload()" class="space-y-4">
+      <input id="fileInput" type="file" accept=".csv,.json" required class="w-full border px-3 py-2 rounded" />
+      <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Upload</button>
     </form>
   </div>
 </section>
 
 <!-- Payment -->
-<section id="payment" class="hidden-section flex items-center justify-center min-h-screen">
+<section id="payment" class="hidden-section flex items-center justify-center p-6">
   <div class="bg-white rounded-2xl shadow-xl p-8 max-w-md w-full">
-    <h2 class="text-3xl font-bold text-center text-gray-800 mb-6">Pay with Paystack</h2>
+    <h2 class="text-3xl font-bold text-center mb-6">Pay with Paystack</h2>
     <p class="text-sm text-gray-500 text-center mb-6">Secure payment for your Abdool Data App plan.</p>
     <input id="email" type="email" placeholder="Enter your email"
       class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4" required />
     <button onclick="payWithPaystack()"
-      class="w-full bg-blue-600 hover:bg-blue-700 transition text-white font-semibold py-2 px-4 rounded-lg">
+      class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg">
       Pay ₦2000
     </button>
     <p class="mt-6 text-center text-sm text-gray-500">You will be redirected after successful payment.</p>
   </div>
 </section>
 
+<!-- Script Section -->
 <script>
+  let uploadedFileName = "";
+
   function showSection(id) {
     document.querySelectorAll('section').forEach(section => section.classList.add('hidden-section'));
     document.getElementById(id).classList.remove('hidden-section');
+
+    if (id === "dashboard" && uploadedFileName) {
+      document.getElementById('dashboard-data').innerText = `Uploaded file: ${uploadedFileName}`;
+    }
+  }
+
+  function handleUpload() {
+    const fileInput = document.getElementById("fileInput");
+    if (fileInput.files.length > 0) {
+      uploadedFileName = fileInput.files[0].name;
+      alert("Data Uploaded Successfully!");
+      showSection("dashboard");
+    } else {
+      alert("Please select a file.");
+    }
   }
 
   function payWithPaystack() {
@@ -119,6 +137,9 @@
     });
     handler.openIframe();
   }
+
+  // Show landing by default
+  window.onload = () => showSection('landing');
 </script>
 
 </body>
